<resources>
    <string name="app_name">RobbyChatApp</string>
    <string name="need_a_new_account">Need A New Account</string>
    <string name="display_name">Display Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hii_there_i_m_using_robby_chat_app">Hii there, I m Using Robby Chat App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="your_status">Your Status</string>
    <string name="save_status">save status</string>
    <string name="welcome_to_robby_chat">Welcome-TO-Robby-Chat</string>
    <string name="login">Login</string>
</resources>
